# DevServer

./: .gitignore  LICENSE  README.md  version.json
.claude/skills/devplan/: SKILL.md
.claude/skills/devtask/: SKILL.md
apps/web/: next.config.ts  package-lock.json  package.json  server.ts  tsconfig.server.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: config.py  main.py  worker.py
apps/worker/src/models/: __init__.py  agent_memory.py  base.py  daily_stat.py  repo.py  setting.py  task.py  task_event.py  task_run.py
apps/worker/src/routes/: env_config.py  health.py  internal.py
apps/worker/src/services/: _free_hooks.py  agent_backends.py  agent_runner.py  app_settings.py  compaction.py  decomposer.py  error_classifier.py  gate_classifier.py  git_ops.py  llm_client.py  memory.py  night_cycle.py  outcome.py  patch_ops.py  plan_gate.py  pr_preflight.py  queue_consumer.py  reality_gate.py  repo_map.py  scheduler.py  side_effect_gate.py  skill_runner.py  skills.py  telegram.py  telegram_polling.py  verifier.py
apps/worker/src/services/notify/: __init__.py  base.py  discord_backend.py  telegram_backend.py
apps/worker/tests/: conftest.py  test_app.py  test_queue_consumer.py  test_scheduler.py  test_telegram.py
config/: .env.example
database/migrations/: 001_initial.sql  008_messaging_webhooks_compaction.sql  009_github_provider.sql  010_memory_quality.sql
docker/: Dockerfile.web  Dockerfile.worker  docker-compose.host-db.yml  docker-compose.local.yml  docker-compose.yml
scripts/: _lib.sh  build.sh  bump-version.sh  migrate.sh  restart.sh  setup-docker.sh  setup-local.sh  start.sh  stop.sh
skills/: README.md
(+107 files in other folders)
