[project]
name = "devserver-worker"
version = "0.1.0"
description = "DevServer autonomous coding agent worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "asyncpg>=0.31",
    "sqlalchemy[asyncio]>=2.0.49",
    "pydantic-settings>=2.13",
    "pgqueuer[asyncpg]>=0.26.3",
    "httpx>=0.28.1",
    "pgvector>=0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "httpx>=0.28.1",
]

[project.scripts]
devserver-worker = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
